--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.11.1",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   },
@@ -22,6 +23,7 @@
     "autoprefixer": "^10.4.6",
     "prettier-plugin-tailwindcss": "^0.1.10",
     "tailwindcss": "^3.0.24",
-    "vite": "^2.9.6"
+    "vite": "^2.9.6",
+    "sass": "^1.51.0"
   }
 }
