--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "dayjs": "^1.11.1",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
